app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Montserrat:wght@600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Montserrat:wght@600&family=Poppins:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,600;1,400;1,600&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;


.custom-background {
  background: hsla(233, 89%, 17%, 1);
  background: radial-gradient(circle, hsla(233, 89%, 17%, 1) 0%, hsla(0, 0%, 0%, 1) 100%);
  background: -moz-radial-gradient(circle, hsla(233, 89%, 17%, 1) 0%, hsla(0, 0%, 0%, 1) 100%);
  background: -webkit-radial-gradient(circle, hsla(233, 89%, 17%, 1) 0%, hsla(0, 0%, 0%, 1) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#050E53", endColorstr="#000000", GradientType=1);
}
.custom-box{
  box-shadow:  8px 8px 10px #000d54,
  -8px -8px 10px #001174;
             border-radius: 22px;
}



.blue_btn {
  @apply font-poppins font-normal py-1.5 px-5 text-2xl text-white bg-blue-950 w-11/12 m-auto;
}

.nav_btn {
  @apply font-poppins text-white font-normal text-center hover:text-white/80;
}

::-webkit-scrollbar {
width: 8px; 
height: 10px;  
background-color: #2281c4;
}

.prof-sched-scrollbar::-webkit-scrollbar {
width: 5px; 
height: 10px;  
background-image: linear-gradient(to bottom,rgb(56 189 248), rgb(125 211 252));
}  
  
::-webkit-scrollbar-thumb {  
background-color: #056387;  
border-radius: 10px;
}


@layer utilities {
  /* Hide scrollbar for Chrome, Safari, and Opera */
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }


  /* Hide scrollbar for IE, Edge, and Firefox */
  .no-scrollbar {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }
}

/* Hide scrollbar for Chrome, Safari and Opera */
.hide-scroll::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.hide-scroll {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

